[project]
name = "uv4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Meek Msaki", email = "98189596+mmsaki@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "ruff>=0.9.3",
]

[project.scripts]
uv4 = "uv4:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
