[project]
name = "uv4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Meek Msaki", email = "98189596+mmsaki@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pytest-watcher>=0.4.3",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
    "eth-abi>=5.2.0",
    "mpmath>=1.3.0",
    "ipython>=8.18.1",
]

[project.scripts]
uv4 = "uv4:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
